[package]
name = "shooter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.74.2"
pylon-cxx = { version = "0.3.4", features = []}
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.11"
anyhow = "1.0"